[gd_scene load_steps=2 format=2]

[ext_resource path="res://DrawingBoard/DrawingBoard.gd" type="Script" id=1]

[node name="DrawingBoard" type="Node2D"]
position = Vector2( 166, 654 )
script = ExtResource( 1 )

[node name="Point1" type="Button" parent="."]
margin_right = 40.0
margin_bottom = 40.0
text = "1"

[node name="Point2" type="Button" parent="."]
margin_left = 100.0
margin_right = 140.0
margin_bottom = 40.0
text = "2"

[node name="Point3" type="Button" parent="."]
margin_top = 100.0
margin_right = 40.0
margin_bottom = 140.0
text = "3"

[node name="Point4" type="Button" parent="."]
margin_left = 100.0
margin_top = 100.0
margin_right = 140.0
margin_bottom = 140.0
text = "4"
